Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1467

ASSERTION(lock->l_req_mode == lock->l_granted_mode)

XMLWordPrintable

    • 3
    • 4597

      We've hit this assertion a number of times on OSS nodes in production. Running 2.1.1-4chaos on those servers.

      
      

      2012-05-24 16:23:09 LustreError: 32583:0:(ost_handler.c:1666:ost_prolong_lock_one()) ASSERTION(lock->l_req_mode == lock->l_granted_mode) failed
      2012-05-24 16:23:09 LustreError: 32583:0:(ost_handler.c:1666:ost_prolong_lock_one()) LBUG
      2012-05-24 16:23:09 May 24 16:23:09 Pid: 32583, comm: ll_ost_io_389
      2012-05-24 16:23:09 sumom9 kernel: L
      2012-05-24 16:23:09 ustreError: 3258Call Trace:
      2012-05-24 16:23:09 3:0:(ost_handler [<ffffffffa03be895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      2012-05-24 16:23:09 .c:1666:ost_prol [<ffffffffa03bedc7>] lbug_with_loc+0x47/0xb0 [libcfs]
      2012-05-24 16:23:09 ong_lock_one()) [<ffffffffa03c842d>] libcfs_assertion_failed+0x2d/0x30 [libcfs]
      2012-05-24 16:23:09 ASSERTION(lock-> [<ffffffffa0aab697>] ost_prolong_lock_one+0xd7/0x100 [ost]
      2012-05-24 16:23:09 l_req_mode == lo [<ffffffffa0aabbcc>] ost_rw_hpreq_check+0x1fc/0x450 [ost]
      2012-05-24 16:23:09 ck->l_granted_mo [<ffffffffa03bf6ce>] ? cfs_mem_cache_free+0xe/0x10 [libcfs]
      2012-05-24 16:23:09 de) failed
      2012-05-24 16:23:09 May 2 [<ffffffffa0aabe2e>] ost_rw_hpreq_fini+0xe/0x10 [ost]
      2012-05-24 16:23:09 4 16:23:09 sumom [<ffffffffa063df68>] ptlrpc_server_finish_request+0x58/0x150 [ptlrpc]
      2012-05-24 16:23:09 9 kernel: Lustre [<ffffffffa06435fa>] ptlrpc_main+0x97a/0x1690 [ptlrpc]
      2012-05-24 16:23:09 Error: 32583:0 [<ffffffffa0642c80>] ? ptlrpc_main+0x0/0x1690 [ptlrpc]
      2012-05-24 16:23:09 ost_handler.c:16 [<ffffffff8100c14a>] child_rip+0xa/0x20
      2012-05-24 16:23:09 66:ost_prolong_l [<ffffffffa0642c80>] ? ptlrpc_main+0x0/0x1690 [ptlrpc]
      2012-05-24 16:23:09 ock_one()) LBUG
      2012-05-24 16:23:09 [<ffffffffa0642c80>] ? ptlrpc_main+0x0/0x1690 [ptlrpc]
      2012-05-24 16:23:09 [<ffffffff8100c140>] ? child_rip+0x0/0x20
      2012-05-24 16:23:09
      2012-05-24 16:23:09 Kernel panic - not syncing: LBUG
      2012-05-24 16:23:09 Pid: 32583, comm: ll_ost_io_389 Not tainted 2.6.32-220.7.1.7chaos.ch5.x86_64 #1
      2012-05-24 16:23:09 Call Trace:
      2012-05-24 16:23:09 May 24 16:23:09 [<ffffffff814ee818>] ? panic+0x78/0x143
      2012-05-24 16:23:09 sumom9 kernel: K [<ffffffffa03bee1b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      2012-05-24 16:23:09 ernel panic - no [<ffffffffa03c842d>] ? libcfs_assertion_failed+0x2d/0x30 [libcfs]
      2012-05-24 16:23:09 t syncing: LBUG
      2012-05-24 16:23:09 [<ffffffffa0aab697>] ? ost_prolong_lock_one+0xd7/0x100 [ost]
      2012-05-24 16:23:09 [<ffffffffa0aabbcc>] ? ost_rw_hpreq_check+0x1fc/0x450 [ost]
      2012-05-24 16:23:09 [<ffffffffa03bf6ce>] ? cfs_mem_cache_free+0xe/0x10 [libcfs]
      2012-05-24 16:23:09 [<ffffffffa0aabe2e>] ? ost_rw_hpreq_fini+0xe/0x10 [ost]
      2012-05-24 16:23:09 [<ffffffffa063df68>] ? ptlrpc_server_finish_request+0x58/0x150 [ptlrpc]
      2012-05-24 16:23:09 [<ffffffffa06435fa>] ? ptlrpc_main+0x97a/0x1690 [ptlrpc]
      2012-05-24 16:23:09 [<ffffffffa0642c80>] ? ptlrpc_main+0x0/0x1690 [ptlrpc]
      2012-05-24 16:23:09 [<ffffffff8100c14a>] ? child_rip+0xa/0x20
      2012-05-24 16:23:09 [<ffffffffa0642c80>] ? ptlrpc_main+0x0/0x1690 [ptlrpc]
      2012-05-24 16:23:09 [<ffffffffa0642c80>] ? ptlrpc_main+0x0/0x1690 [ptlrpc]
      2012-05-24 16:23:09 [<ffffffff8100c140>] ? child_rip+0x0/0x20

            ys Yang Sheng
            morrone Christopher Morrone (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: